--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "~4.4.3"
+    "express": "~4.4.3",
+    "gulp-concat-css": "^2.2.0"
   }
 }
